# app

katri/20191004_Controller/katri-controlsystem_fixed_can_button_pressed/: config.properties  define.h  main.cpp  mainwindow.cpp  mainwindow.h  package.xml
katri/20191004_Controller/katri-controlsystem_fixed_can_button_pressed/katricontrols/: CMakeLists.txt  controll.cpp  controll.h  controll.ui  viewerpanel.cpp  viewerpanel.h
katri/20191004_Controller/katri-controlsystem_fixed_can_button_pressed/katricontrols/camera/: viewcamera.ui
katri/20191004_Controller/katri-controlsystem_fixed_can_button_pressed/katricontrols/common/: Mediator.cpp  common.h
katri/20191004_Controller/katri-controlsystem_fixed_can_button_pressed/katricontrols/graph/: customgraph.h
katri/20191004_Controller/katri-controlsystem_fixed_can_button_pressed/katricontrols/videoplayer/: fullscreen.cpp  playbackcontrol.h  zoombutton.cpp  zoombutton.h
katri/20191004_Controller/katri-controlsystem_fixed_can_button_pressed/katrilogger/: command.cpp
katri/20191008_Controller/katri-controlsystem_lidar_new/katri-logger/: CMakeLists.txt  VLP16_points_multi.launch  config.properties  crondping.sh  lidar.properties
katri/20191008_Controller/katri-controlsystem_lidar_new/katri-logger/src/: main.cpp  nodeWorker.cpp
katri/20191008_Controller/katri-controlsystem_lidar_new/katri-logger/src/can/: canParameter.cpp
katri/20191008_Controller/katri-controlsystem_lidar_new/katri-logger/src/gps/: common_gps.cpp  gpsLaunch.h
katri/20191010_Controller/katri-controlsystem/: .gitignore  (+2 more)
katri/20191014_Controller/katri-controlsystem/: CMakeLists.txt  mainwindow.h
katri/20191014_Controller/katri-controlsystem/katricontrols/: CMakeLists.txt  controll.ui  controlpanel.cpp  menubar.cpp
katri/20191014_Controller/katri-controlsystem/katricontrols/camera/: viewcamera.cpp  viewcamera.h  viewdatacamera.h
katri/20191014_Controller/katri-controlsystem/katricontrols/camera_dashboard/: dashboardpanel.ui  glwidgetimage.cpp  glwidgetimage.h
katri/20191014_Controller/katri-controlsystem/katricontrols/common/: FrameLess.cpp
katri/20191014_Controller/katri-controlsystem/katricontrols/graph/: customgraphsmall.ui  navigationmanager.cpp  qcustomplot.cpp
katri/20191014_Controller/katri-controlsystem/katricontrols/videoplayer/: customgraphicsview.h  video.h  zoombutton.ui
katri/20191014_Controller/katri-controlsystem/katrilogger/: command.cpp  command.h  nodeWorker.cpp  nodeWorker.h  socketthread.cpp  socketthread.h
katri/20191014_Controller/katri-controlsystem/pattern/: Message.h
katri/20191018_Logger/katri-logging-system/can-utils/: CMakeLists.txt  lib.c
katri/20191018_Logger/katri-logging-system/katri-control-console/: package.xml
katri/20191018_Logger/katri-logging-system/katri-control-console/src/: runtime.h
katri/20191018_Logger/katri-logging-system/katri-logger/: CMakeLists.txt  README.md  camera.properties  config.properties
katri/20191018_Logger/katri-logging-system/katri-logger/src/: appConfig.h  controller.h  dataSourceManager.cpp  loggerManager.h  node1Worker.cpp  nodeWorker.cpp  nodeWorker.h
katri/20191023_Processing/katri-processingsystem_ui_new_process/: CMakeLists.txt  config.properties  main.cpp  mainrc.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  subwindow_export.cpp  subwindow_export.h  subwindow_export.ui
katri/20191023_Processing/katri-processingsystem_ui_new_process/cmake/modules/: FindQt4or5.cmake  libarchiveConfig-release.cmake  libarchiveConfig.cmake
katri/20191023_Processing/katri-processingsystem_ui_new_process/katricontrols/: CMakeLists.txt  backpanel.cpp  backpanel.h  backpanel.ui  canbusview.cpp  canbusview.h  canbusview.ui  common.cpp  common.h  exportdata.cpp  exportdata.h  exportdata.ui  exportdata_left.cpp  exportdata_left.h  exportdata_left.ui  glwidgetimage.cpp  glwidgetimage.h  imageview.cpp  imageview.h  imageview.ui  librc.qrc  mapviewer.cpp  mapviewer.h  mapviewer.ui  navigationpanel.cpp  navigationpanel.h  navigationpanel.ui  playbackcontrol.cpp  playbackcontrol.h  playbackcontrol.ui  simulationview.cpp  simulationview.h  simulationview.ui  viewdataexport.cpp  viewdataexport.h  viewdataexport.ui  viewerpanel.cpp  viewerpanel.h  viewerpanel.ui
katri/20191023_Processing/katri-processingsystem_ui_new_process/katricontrols/lidar/: lidarview.cpp  lidarview.h  scatterdatamodifier.cpp  scatterdatamodifier.h  simulationlidarview.cpp  simulationlidarview.h  simulationlidarview.ui
katri/20191023_Processing/katri-processingsystem_ui_new_process/katricontrols/qml/: RangeSlider.qml
katri/20191023_Processing/katri-processingsystem_ui_new_process/src/broadcast/: CCanSimulator.cpp  CCanSimulator.h  CGpsSimulator.cpp  CGpsSimulator.h  CLidarSimulator.cpp  CLidarSimulator.h  CMediaControl.cpp  CMediaControl.h  CVideoPlayer.cpp  CVideoPlayer.h  SchedulerThread.cpp  SchedulerThread.h
katri/20191023_Processing/katri-processingsystem_ui_new_process/src/common/: appConfig.cpp  appConfig.h  qarchive.cpp  qarchive.h
katri/20191023_Processing/katri-processingsystem_ui_new_process/src/extractor/: imageextraction.cpp  imageextraction.h  kittiextractor.cpp  kittiextractor.h
katri/20191023_Processing/katri-processingsystem_ui_new_process/src/mediator/: IColleague.h  IMediator.cpp  IMediator.h
katri/20191024_Controller/katri-controlsystem_ui_new/katricontrols/: CMakeLists.txt  controll.h  controlpanel.cpp  controlpanel.ui  recordbutton.cpp  recordbutton.ui  viewerpanel.cpp  viewerpanel.h
katri/20191024_Controller/katri-controlsystem_ui_new/katricontrols/camera/: viewerperformance.h
katri/20191024_Controller/katri-controlsystem_ui_new/katricontrols/checkedbox/: checkedbox.cpp  checkedbox.h
katri/20191024_Controller/katri-controlsystem_ui_new/katricontrols/common/: common.h
katri/20191024_Controller/katri-controlsystem_ui_new/katricontrols/katristyle/: katristyle.cpp
katri/20191024_Controller/katri-controlsystem_ui_new/katricontrols/ui_all/: record.cpp  record.h  record.ui
katri/20191024_Controller/katri-controlsystem_ui_new/katricontrols/videoplayer/: playbackcontrol.ui  video.h
(+297 files in other folders)
