<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controlsystem</name>
  <version>0.0.1</version>
  <description>KATRI Controller System</description>
  <maintainer email="xoai@mail.com">XoaiSoft</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>katri_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>katri_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

